Adicionando função nativa de calculo de funcionario

--- a/solidare/portal/templates/cadastro_candidato.html
+++ b/solidare/portal/templates/cadastro_candidato.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Cadastro de Candidato{% endblock %}
+{% block title %}Formulário de Candidatos{% endblock %}
 
 {% block content %}
 <style>
