--- a/solidare/portal/templates/login.html
+++ b/solidare/portal/templates/login.html
@@ -10,5 +10,5 @@
          <input type="password" name="password" placeholder="Senha" required><br><br>
          <button type="submit">Entrar</button>
      </form>
-     <p>Não tem uma conta? <a href="{% url 'cadastro' %}">Cadastre-se</a></p>
+     <p>Não tem uma conta? <a href="{% url 'cadastro_candidato' %}">Cadastre-se</a></p>
  {% endblock %}
