--- a/solidare/portal/templates/base.html
+++ b/solidare/portal/templates/base.html
@@ -13,7 +13,8 @@
              padding: 0;
          }
          .container {
-             width: 300px;
+             width: 80%;
+             max-width: 800px;
              margin: 50px auto;
              padding: 20px;
              background: white;
@@ -21,6 +22,7 @@
              border-radius: 10px;
          }
      </style>
+     {% block extra_css %}{% endblock %}
  </head>
  <body>
      <div class="container">
