--- a/solidare/portal/templates/login.html
+++ b/solidare/portal/templates/login.html
@@ -1,14 +1,27 @@
 {% extends "base.html" %}
- 
- {% block title %}Login{% endblock %}
- 
- {% block content %}
-     <h2>Login</h2>
-     <form method="POST">
-         {% csrf_token %}
-         <input type="text" name="username" placeholder="Usuário" required><br><br>
-         <input type="password" name="password" placeholder="Senha" required><br><br>
-         <button type="submit">Entrar</button>
-     </form>
-     <p>Não tem uma conta? <a href="{% url 'cadastro_candidato' %}">Cadastre-se</a></p>
- {% endblock %}
+
+{% block title %}Login{% endblock %}
+
+{% block content %}
+  <div class="login-container">
+    <h2>Login</h2>
+
+    {% if error %}
+      <p style="color: red;">{{ error }}</p>
+    {% endif %}
+
+    <form method="POST">
+      {% csrf_token %}
+      
+      <label for="id_email">Email:</label><br>
+      <input type="email" name="email" id="id_email" placeholder="Digite seu email" required><br><br>
+
+      <label for="id_password">Senha:</label><br>
+      <input type="password" name="password" id="id_password" placeholder="Digite sua senha" required><br><br>
+
+      <button type="submit">Entrar</button>
+    </form>
+
+    <p>Não tem uma conta? <a href="{% url 'cadastro_candidato' %}">Cadastre-se</a></p>
+  </div>
+{% endblock %}
