--- a/solidare/portal/templates/professor.html
+++ b/solidare/portal/templates/professor.html
@@ -59,6 +59,7 @@
     <div class="sidebar">
       <h3>Menu</h3>
       <button onclick="window.location.href='/candidatos/'">Candidatos</button>
+      <button onclick="window.location.href='/avisos/'">Avisos</button>
     </div>
     <div class="content">
       <div class="topbar">
